--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <script>
                 const listaWhatsApp = [];
                 //formato do número deve ser 5511999998888
-                listaWhatsApp.push("https://api.whatsapp.com/send?phone=5521989839018&text=Quero%20fazer%20uma%20consulta%20gratuita");
-                listaWhatsApp.push("https://api.whatsapp.com/send?phone=5521989839018&text=Quero%20fazer%20uma%20consulta%20gratuita");
+                listaWhatsApp.push("https://link.dispara.ai/c138cdbc-d5fd-44d8-879d-d56e3d1216ea?text=Quero%20a%20minha%20consulta%20gratuita");
+                listaWhatsApp.push("https://link.dispara.ai/c138cdbc-d5fd-44d8-879d-d56e3d1216ea?text=Quero%20a%20minha%20consulta%20gratuita");
 
                 function getRandomLogoUrl() {
                     return listaWhatsApp[Math.floor(Math.random() * listaWhatsApp.length)]
