--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <script>
                 const listaWhatsApp = [];
                 //formato do número deve ser 5511999998889
-                listaWhatsApp.push("https://link.dispara.ai/c138cdbc-d5fd-44d8-879d-d56e3d1216ea?text=Quero%20a%20minha%20consulta%20gratuita");
-                listaWhatsApp.push("https://link.dispara.ai/c138cdbc-d5fd-44d8-879d-d56e3d1216ea?text=Quero%20a%20minha%20consulta%20gratuita");
+                listaWhatsApp.push("https://link.dispara.ai/22422d08-ef01-48c0-9ce8-0baf61b04a51?text=Quero%20uma%20consulta%20gratuita");
+                listaWhatsApp.push("https://link.dispara.ai/22422d08-ef01-48c0-9ce8-0baf61b04a51?text=Quero%20uma%20consulta%20gratuita");
 
                 function getRandomLogoUrl() {
                     return listaWhatsApp[Math.floor(Math.random() * listaWhatsApp.length)]
