--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 gtag('config', 'G-XXXXXXX');
             </script>
 
-           <!-- Facebook Pixel Code -->
+           <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -124,17 +124,15 @@ n.callMethod.apply(n,arguments):n.queue.push(arguments)};
 if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
 n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window,document,'script',
+s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
- fbq('init', '658227113030452'); 
+fbq('init', '753972893267507');
 fbq('track', 'PageView');
 </script>
-<noscript>
- <img height="1" width="1" 
-src="https://www.facebook.com/tr?id=658227113030452&ev=PageView
-&noscript=1"/>
-</noscript>
-<!-- End Facebook Pixel Code -->
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=753972893267507&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
         </div>
         <footer class="active-select footer" type="section" id="section-80517" bg-color2="transparent" style="background-color: rgb(102, 0, 0); background-image: url(&quot;undefined&quot;), linear-gradient(transparent 0%, transparent 100%); color: rgb(255, 255, 255);">
             <div class="center content_area active-select" type="center" id="center-868060" bg-color2="rgba(0, 0, 0, 0)">
