--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <script>
                 const listaWhatsApp = [];
                 //formato do número deve ser 5511999998889
-                listaWhatsApp.push("https://link.dispara.ai/e03cb128-4f9f-4aba-b928-a73f44a90b29?text=Quero%20uma%20consulta%20gratuita");
-                listaWhatsApp.push("https://link.dispara.ai/e03cb128-4f9f-4aba-b928-a73f44a90b29?text=Quero%20uma%20consulta%20gratuita");
+                listaWhatsApp.push("https://link.dispara.ai/c2f8f4ee-d219-4ac1-8915-32898fe608d2?text=Quero%20uma%20consulta%20com%20as%20cartas");
+                listaWhatsApp.push("https://link.dispara.ai/c2f8f4ee-d219-4ac1-8915-32898fe608d2?text=Quero%20uma%20consulta%20com%20as%20cartas");
 
                 function getRandomLogoUrl() {
                     return listaWhatsApp[Math.floor(Math.random() * listaWhatsApp.length)]
