--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <script>
                 const listaWhatsApp = [];
                 //formato do número deve ser 5511999998889
-                listaWhatsApp.push("https://link.dispara.ai/c2f8f4ee-d219-4ac1-8915-32898fe608d2?text=Quero%20uma%20consulta%20com%20as%20cartas");
-                listaWhatsApp.push("https://link.dispara.ai/c2f8f4ee-d219-4ac1-8915-32898fe608d2?text=Quero%20uma%20consulta%20com%20as%20cartas");
+                listaWhatsApp.push("https://link.dispara.ai/ca92bb60-a945-4616-a8d2-5ad54b19bbaa?text=Quero%20receber%20as%20revela%C3%A7%C3%B5es%20das%20cartas");
+                listaWhatsApp.push("https://link.dispara.ai/ca92bb60-a945-4616-a8d2-5ad54b19bbaa?text=Quero%20receber%20as%20revela%C3%A7%C3%B5es%20das%20cartas");
 
                 function getRandomLogoUrl() {
                     return listaWhatsApp[Math.floor(Math.random() * listaWhatsApp.length)]
